--- a/src/app/meu-perfil/alterar-senha.component.html
+++ b/src/app/meu-perfil/alterar-senha.component.html
@@ -1,10 +1,13 @@
 <div id="default-content">
+
+    <app-spinner *ngIf="showLoading"></app-spinner>
+    <ng-container *ngIf="!showLoading">
     <div class="internal-container-out">
         <div class="content-header">
             <h2>{{'geral.alterarSenha' | translate}}</h2>
         </div>
         <div class="content-body">
-            <form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
+            <form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate *ngIf="!reconhecimentoFacialEnabled || verifiedIdentity">
                 <div class="row">
                     <div class="col-md-2">
                         <label >
@@ -92,19 +95,38 @@
                     </div>
                 </div>
 
+                
+                
+                
+                
                 <div class="buttons">
                     <button
-                        class="btn btn-custom2 w-150 mr-4"
-                        type="button"
-                        (click)="resetarForm()"
+                    class="btn btn-custom2 w-150 mr-4"
+                    type="button"
+                    (click)="resetarForm()"
                     >
-                        {{'geral.cancelar' | translate}}
-                    </button>
-                    <button class="btn btn-custom w-150" type="submit">
-                        {{'geral.salvar' | translate}}
+                    {{'geral.cancelar' | translate}}
+                </button>
+                <button class="btn btn-custom w-150" type="submit">
+                    {{'geral.salvar' | translate}}
+                </button>
+            </div>
+            </form>
+            <div #legitimuz id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && !verifiedIdentity">
+                <div id="legitimuz">
+                    <div id="verify-identity-text">
+                        {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
+                    </div>
+                    <input *ngIf="cliente?.cpf" id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
+                    <input type="hidden" id="legitimuz-ref-id" [value]="token">
+                    <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                        {{'saques.identityVerify' | translate}}
+                        <i class="fa-solid fa-id-card"></i>
                     </button>
                 </div>
-            </form>
+                <div id="legitimuz-root"></div>
+            </div>
         </div>
     </div>
+    </ng-container>
 </div>
