--- a/src/app/meu-perfil/alterar-senha.component.css
+++ b/src/app/meu-perfil/alterar-senha.component.css
@@ -3,20 +3,20 @@
     flex-direction: column;
 }
 
-.content-header {
+/* /* .content-header {
     margin-bottom: 50px;
-}
+} */
 
-.content-body {
+/* .content-body {
     flex: 1;
     display: flex;
-}
+} */
 
 .content-body form {
     flex: 1;
     display: flex;
     flex-direction: column;
-}
+} 
 
 .row {
     margin-bottom: 30px;
@@ -55,4 +55,20 @@ label {
     .content-header{
         margin: 8px 0;
     }   
+}
+
+#legitimuz-container {
+    background-color: var(--sidebars);
+    padding: 30px 20px;
+}
+
+#legitimuz {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+#legitimuz-action-verify {
+    flex: 1;
+    width: 25%;
 }
