--- a/src/app/meu-perfil/alterar-senha.component.css
+++ b/src/app/meu-perfil/alterar-senha.component.css
@@ -45,6 +45,21 @@ label {
     margin-left: -30px;
 }
 
+.requirements-password {
+    margin: 0;
+    padding: 10px 8px;
+    list-style-type: none;
+}
+
+.fulfilled {
+    color: green;
+    text-decoration: line-through;
+}
+
+.unfulfilled {
+    opacity: 0.6;
+}
+
 @media only screen and (max-width: 1024px) {
     .buttons {
         justify-content: center;
