--- a/src/app/auth/resetar-senha/resetar-senha.component.html
+++ b/src/app/auth/resetar-senha/resetar-senha.component.html
@@ -120,7 +120,7 @@
                     </div>
                     <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="dataUserCPF"/>
                     <input type="hidden" id="legitimuz-ref-id" [value]="token">
-                    <button (click)="printTeste()" id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                    <button (click)="printTeste()" id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity">
                         {{'saques.identityVerify' | translate}}
                         <i class="fa-solid fa-id-card"></i>
                     </button>
