--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
@@ -281,7 +281,7 @@
     gap: 16px;
 }
 
-#legitimuz-action-verify {
+#legitimuz-action-faceindex {
     flex: 1;
     width: 25%;
 }
@@ -351,7 +351,7 @@
         width: 100%;
     }
 
-    #legitimuz-action-verify {
+    #legitimuz-action-faceindex {
         width: 100%;
     }
 }
