--- a/src/app/meu-perfil/alterar-senha.component.html
+++ b/src/app/meu-perfil/alterar-senha.component.html
@@ -119,7 +119,7 @@
                     </div>
                     <input *ngIf="cliente?.cpf" id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
                     <input type="hidden" id="legitimuz-ref-id" [value]="token">
-                    <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                    <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity">
                         {{'saques.identityVerify' | translate}}
                         <i class="fa-solid fa-id-card"></i>
                     </button>
