--- a/src/app/casino/wall/components/wall-game-card/wall-game-card.component.html
+++ b/src/app/casino/wall/components/wall-game-card/wall-game-card.component.html
@@ -4,80 +4,82 @@
     'game-card--filter': isCardFilter,
 }">
     <ng-container>
-        <img
-            class="game-card__image"
-            loading="lazy"
-            title="{{game.gameName}}"
-            [src]="gameImageUrl"
-        >
+        <div class="game-card__image-container">
+                <img
+                class="game-card__image"
+                loading="lazy"
+                title="{{game.gameName}}"
+                [src]="gameImageUrl"
+                >
+                <div class="game-button">
+                    <div class="game-button__container">
+                        <ng-container *ngIf="!isDemo">
+                        <a
+                        *ngIf="game.gameDemo"
+                        [routerLink]="routerLinkDemo"
+                        class="btn btn-xs game-button--demo"
+                        >
+                            {{'geral.demo' | translate}}
+                        </a>
+                        <ng-container *ngIf="isLoggedIn && isCliente">
+                            <a
+                                [routerLink]="routerLinkReal"
+                                class="btn btn-xs game-button--play"
+                            >
+                            {{'geral.jogar' | translate}}
+                            </a>
+                        </ng-container>
+                        <ng-container *ngIf="!isLoggedIn">
+                            <a
+                            (click)="handleModalLogin()"
+                            [routerLink]="routerLinkReal"
+                            class="btn btn-xs game-button--play"
+                            >
+                            {{'geral.jogar' | translate}}
+                        </a>
+                        </ng-container>
+                    </ng-container>
+                    <ng-container *ngIf="isDemo">
+                        <ng-container *ngIf="providerIsPragmatic || providerIsSalsa">
+                            <a
+                                *ngIf="game.gameDemo"
+                                [routerLink]="routerLinkDemo"
+                                class="btn btn-xs game-button--demo"
+                            >
+                                {{'geral.demo' | translate}}
+                            </a>
+                        </ng-container>
+                        <ng-container *ngIf="providerIsSpribe">
+                            <ng-container *ngIf="isLoggedIn">
+                                <a
+                                    [routerLink]="routerLinkDemo"
+                                    class="btn btn-xs game-button--demo"
+                                >
+                                    {{'geral.demo' | translate}}
+                                </a>
+                            </ng-container>
+                            <ng-container *ngIf="!isLoggedIn">
+                                <a
+                                    (click)="handleModalLogin()"
+                                    class="btn btn-xs game-button--demo"
+                                >
+                                    {{'geral.demo' | translate}}
+                                </a>
+                            </ng-container>
+                        </ng-container>
+                        <ng-container *ngIf="!providerIsPragmatic && !providerIsSpribe && !providerIsSalsa">
+                            <a class="btn btn-xs game-button--lock">
+                                <i class="fa fa-lock"></i>
+                            </a>
+                        </ng-container>
+                    </ng-container>
+                        </div>
+                         </div>
+        </div>    
     </ng-container>
     
     <div class="game-card__info">
         <span class="game-card__info--title">{{game.gameName}}</span>
         <span class="game-card__info--provider">{{game.fornecedorExibicao}}</span>
-    </div>
-    <div class="game-button">
-        <div class="game-button__container">
-            <ng-container *ngIf="!isDemo">
-                <a
-                    *ngIf="game.gameDemo"
-                    [routerLink]="routerLinkDemo"
-                    class="btn btn-xs game-button--demo"
-                >
-                    {{'geral.demo' | translate}}
-                </a>
-                <ng-container *ngIf="isLoggedIn && isCliente">
-                    <a
-                        [routerLink]="routerLinkReal"
-                        class="btn btn-xs game-button--play"
-                    >
-                        {{'geral.jogar' | translate}}
-                    </a>
-                </ng-container>
-                <ng-container *ngIf="!isLoggedIn">
-                    <a
-                        (click)="handleModalLogin()"
-                        [routerLink]="routerLinkReal"
-                        class="btn btn-xs game-button--play"
-                    >
-                        {{'geral.jogar' | translate}}
-                    </a>
-                </ng-container>
-            </ng-container>
-            <ng-container *ngIf="isDemo">
-                <ng-container *ngIf="providerIsPragmatic || providerIsSalsa">
-                    <a
-                        *ngIf="game.gameDemo"
-                        [routerLink]="routerLinkDemo"
-                        class="btn btn-xs game-button--demo"
-                    >
-                        {{'geral.demo' | translate}}
-                    </a>
-                </ng-container>
-                <ng-container *ngIf="providerIsSpribe">
-                    <ng-container *ngIf="isLoggedIn">
-                        <a
-                            [routerLink]="routerLinkDemo"
-                            class="btn btn-xs game-button--demo"
-                        >
-                            {{'geral.demo' | translate}}
-                        </a>
-                    </ng-container>
-                    <ng-container *ngIf="!isLoggedIn">
-                        <a
-                            (click)="handleModalLogin()"
-                            class="btn btn-xs game-button--demo"
-                        >
-                            {{'geral.demo' | translate}}
-                        </a>
-                    </ng-container>
-                </ng-container>
-                <ng-container *ngIf="!providerIsPragmatic && !providerIsSpribe && !providerIsSalsa">
-                    <a class="btn btn-xs game-button--lock">
-                        <i class="fa fa-lock"></i>
-                    </a>
-                </ng-container>
-            </ng-container>
-        </div>
     </div>
 </div>
