--- a/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
+++ b/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
@@ -1,5 +1,4 @@
 .game-card {
-    position: relative;
     border-radius: 10px;
     overflow: hidden;
     min-height: 125px;
@@ -89,7 +88,7 @@
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
-    top: 0;
+    top: 15%;
 
     &__container {
         width: 100%;
@@ -256,4 +255,8 @@
         min-height: 170px;
         min-width: 170px;
     }
+}
+.game-card__image-container {
+    position: relative;
+    max-width: 200px;
 }
