--- a/src/app/casino/wall/components/wall-provider-card/wall-provider-card.component.css
+++ b/src/app/casino/wall/components/wall-provider-card/wall-provider-card.component.css
@@ -34,6 +34,12 @@
 }
 
 @media only screen and (min-width: 320px) and (max-width: 767px){
+    .provider-card {
+        padding: 10px 15px;
+    }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 767px){
     .provider-card--inline {
         width: 120px;
         height: 60px;
