feat: paleta de cores ajustadas

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -19,7 +19,7 @@
 body {
   min-height: 100vh;
   color: #ffffff;
-  color: var(--color-text);
+  color: var(--foreground-league);
   background: #0a0a0a;
   background: var(--background);
   margin: 0;
