--- a/src/app/meu-perfil/alterar-senha.component.css
+++ b/src/app/meu-perfil/alterar-senha.component.css
@@ -68,7 +68,7 @@ label {
     gap: 16px;
 }
 
-#legitimuz-action-faceindex{
+#legitimuz-action-faceindex, #legitimuz-action-verify {
     flex: 1;
     width: 25%;
 }
