--- a/src/app/auth/resetar-senha/resetar-senha.component.html
+++ b/src/app/auth/resetar-senha/resetar-senha.component.html
@@ -116,11 +116,25 @@
             <div #legitimuz id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && !verifiedIdentity">
                 <div id="legitimuz">
                     <div id="verify-identity-text">
-                        {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
+                        {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}} OCR + FACEMATCH
                     </div>
-                    <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="dataUserCPF"/>
+                    <input *ngIf="cliente?.cpf" id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
                     <input type="hidden" id="legitimuz-ref-id" [value]="token">
-                    <button (click)="printTeste()" id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                    <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                        {{'saques.identityVerify' | translate}}
+                        <i class="fa-solid fa-id-card"></i>
+                    </button>
+                </div>
+                <div id="legitimuz-root"></div>
+            </div>
+            <div #legitimuzLiveness id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && verifiedIdentity">
+                <div id="legitimuz">
+                    <div id="verify-identity-text">
+                        {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}} Liveness
+                    </div>
+                    <input *ngIf="cliente?.cpf" id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
+                    <input type="hidden" id="legitimuz-ref-id" [value]="token">
+                    <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity">
                         {{'saques.identityVerify' | translate}}
                         <i class="fa-solid fa-id-card"></i>
                     </button>
