--- a/src/app/meu-perfil/alterar-senha.component.html
+++ b/src/app/meu-perfil/alterar-senha.component.html
@@ -112,7 +112,7 @@
                 </button>
             </div>
             </form>
-            <div #legitimuz id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && !verifiedIdentity">
+            <div #legitimuz id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && verifiedIdentity">
                 <div id="legitimuz">
                     <div id="verify-identity-text">
                         {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}} OCR + FACEMATCH
