--- a/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
@@ -275,7 +275,7 @@
             </li>
             <li class="cambista-item">
                 <a [routerLink]="['/clientes/carteira']" routerLinkActive="router-link-active">
-                    <i class="material-symbols-outlined">account_balance_wallet</i>
+                    <i class="fa fa-wallet"></i>
                     <span class="regiao-nome">{{'geral.carteira' | translate}}</span>
                 </a>
             </li>
