--- a/src/app/clientes/carteira/carteira.component.html
+++ b/src/app/clientes/carteira/carteira.component.html
@@ -11,7 +11,9 @@
     </div>
     <div class="content-body">
         <div class="content">
-            <div class="balance-container">
+            <app-spinner *ngIf="showLoading"></app-spinner>
+
+            <div *ngIf="!showLoading" class="balance-container">
                 <div class="balance-header">
                     <h2>Saldo Total</h2>
                     <p class="balance-amount">{{ balance | currency }}</p>
@@ -23,7 +25,7 @@
                     </div>
                     <div class="balance-item">
                         <span>Saldo Bloqueado</span>
-                        <span>{{  withdrawBlocked | currency }}</span>
+                        <span>{{ withdrawBlocked | currency }}</span>
                     </div>
                     <div class="balance-item">
                         <span>Bônus Esportes</span>
