--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="content-body">
             <div class="content">
-                <div id="withdrawal" *ngIf="cadastroCompleto && !respostaSolicitacao && (!reconhecimentoFacialEnabled || verifiedIdentity)">
+                <div id="withdrawal" *ngIf="cadastroCompleto && !respostaSolicitacao && (!reconhecimentoFacialPrimeiroSaque || reconhecimentoFacialPrimeiroSaqueValidado)">
                     <form [formGroup]="form" (ngSubmit)="onSubmit()">
                         <app-spinner *ngIf="submitting"></app-spinner>
                         <div id="withdrawal-container">
@@ -176,10 +176,10 @@
                 <div class="alert alert-danger" *ngIf="!cadastroCompleto">
                     {{errorMessage}} <a class="btn-link pointer" (click)="completarCadatro()">{{'geral.cliqueAquiParaContinuar' | translate}}.</a>
                 </div>
-                <div #legitimuz id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && !verifiedIdentity">
+                <div #legitimuz id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && reconhecimentoFacialPrimeiroSaque && !reconhecimentoFacialPrimeiroSaqueValidado && !verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
-                            {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}} OCR + FACEMATCH
+                            {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
                         </div>
                         <input *ngIf="cliente?.cpf" id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
                         <input type="hidden" id="legitimuz-ref-id" [value]="token">
@@ -190,10 +190,10 @@
                     </div>
                     <div id="legitimuz-root"></div>
                 </div>
-                <div #legitimuzLiveness id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && verifiedIdentity">
+                <div #legitimuzLiveness id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && reconhecimentoFacialPrimeiroSaque && !reconhecimentoFacialPrimeiroSaqueValidado && verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
-                            {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}} Liveness
+                            {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
                         </div>
                         <input *ngIf="cliente?.cpf" id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
                         <input type="hidden" id="legitimuz-ref-id" [value]="token">
