--- a/src/app/auth/resetar-senha/resetar-senha.component.css
+++ b/src/app/auth/resetar-senha/resetar-senha.component.css
@@ -94,8 +94,12 @@ form .buttons {
     gap: 16px;
 }
 
-#legitimuz-action-faceindex {
+#legitimuz-action-faceindex, #legitimuz-action-verify {
     flex: 1;
     width: 25%;
+}
+
+.btn-custom i {
+    margin-right: 8px;
 }
 
