--- a/src/app/auth/resetar-senha/resetar-senha.component.html
+++ b/src/app/auth/resetar-senha/resetar-senha.component.html
@@ -6,7 +6,7 @@
             <h2>{{'geral.resetarSenha' | translate}}</h2>
         </div>
         <div class="content-body">
-            <div class="content" *ngIf="!reconhecimentoFacialEnabled || verifiedIdentity">
+            <div class="content" *ngIf="!reconhecimentoFacialRedefinicaoSenha || reconhecimentoFacialRedefinicaoSenhaValidado">
                 <div class="row">
                     <div class="col col-md-12">
                         <h2>{{'senhas.redefinirSenha' | translate}}</h2>
@@ -113,30 +113,30 @@
                     </div>
                 </form>
             </div>
-            <div #legitimuz id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && !verifiedIdentity">
+            <div #legitimuz id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && reconhecimentoFacialRedefinicaoSenha && !reconhecimentoFacialRedefinicaoSenhaValidado && !verifiedIdentity">
                 <div id="legitimuz">
                     <div id="verify-identity-text">
-                        {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}} OCR + FACEMATCH
+                        {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
                     </div>
-                    <input *ngIf="cliente?.cpf" id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
+                    <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="dataUserCPF"/>
                     <input type="hidden" id="legitimuz-ref-id" [value]="token">
                     <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity">
-                        {{'saques.identityVerify' | translate}}
                         <i class="fa-solid fa-id-card"></i>
+                        {{'saques.identityVerify' | translate}}
                     </button>
                 </div>
                 <div id="legitimuz-root"></div>
             </div>
-            <div #legitimuzLiveness id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && verifiedIdentity">
+            <div #legitimuzLiveness id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && reconhecimentoFacialRedefinicaoSenha && !reconhecimentoFacialRedefinicaoSenhaValidado && verifiedIdentity">
                 <div id="legitimuz">
                     <div id="verify-identity-text">
-                        {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}} Liveness
+                        {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
                     </div>
-                    <input *ngIf="cliente?.cpf" id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
+                    <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="dataUserCPF"/>
                     <input type="hidden" id="legitimuz-ref-id" [value]="token">
                     <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity">
-                        {{'saques.identityVerify' | translate}}
                         <i class="fa-solid fa-id-card"></i>
+                        {{'saques.identityVerify' | translate}}
                     </button>
                 </div>
                 <div id="legitimuz-root"></div>
