--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.css
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.css
@@ -199,7 +199,8 @@ a.link-termos-politica {
 }
 
 .btn-legitimuz {
-    margin-bottom: 24px;
+    margin-bottom: 18px;
+    margin-top: 8px;
 }
 
 .btn-legitimuz i {
