--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -22,7 +22,7 @@
                                    formControlName="cpf"
                                    [ngClass]="applyCssInputError('cpf')" placeholder=" " [dropSpecialCharacters]="false"
                                    inputmode="numeric"
-                                   [readonly]="reconhecimentoFacialCadastroValidado">
+                                   [readonly]="(reconhecimentoFacialEnabled && reconhecimentoFacialCadastro && reconhecimentoFacialCadastroValidado === true)">
                             <label for="cpf">{{'geral.cpf' | translate}}</label>
                         </div>
 
@@ -138,21 +138,19 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12">
-                <div #legitimuz id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && !reconhecimentoFacialCadastroValidado">
-                    <div id="legitimuz">
-                        <div id="verify-identity-text">
+            <div #legitimuz id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && !reconhecimentoFacialCadastroValidado">
+                <div id="legitimuz">
+                    <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
-                        </div>
-                        <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="dataUserCPF"/>
-                        <input type="hidden" id="legitimuz-ref-id" [value]="token">
-                        <button (click)="printTeste()" id="legitimuz-action-verify" class="btn btn-custom btn-legitimuz" *ngIf="!disapprovedIdentity">
-                            <i class="fa-solid fa-id-card"></i>
-                            {{'saques.identityVerify' | translate}}
-                        </button>
                     </div>
-                    <div id="legitimuz-root"></div>
+                    <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="dataUserCPF"/>
+                    <input type="hidden" id="legitimuz-ref-id" [value]="token">
+                    <button (click)="printTeste()" id="legitimuz-action-verify" class="btn btn-custom btn-legitimuz" *ngIf="!disapprovedIdentity">
+                        <i class="fa-solid fa-id-card"></i>
+                            {{'saques.identityVerify' | translate}}
+                    </button>
                 </div>
+                <div id="legitimuz-root"></div>
             </div>
             <div class="row">
                 <div class="col-12">
