--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,23 +1,27 @@
 /* semantic color variables for this project */
 :root {
-  --foreground-highlight: #181818;
-  --inputs-odds: #003566;
-  --league: #001d3d;
-  --game: #001d3d;
-  --highlight: #ca7d40;
-  --header: #001d3d;
-  --background: #021126;
-  --wb-warning: #f61a1a;
-  --inputs-odds: #003566;
-  --foreground-inputs-odds: #000000;
-  --foreground-bottom-bar: #000000;
+  --header:#0a0a09; 
+  --foreground-header:#ffffff;
+  --sub-nav:#181818;
+  --foreground-sub-nav:#ffffff;
+  --sidebars:#0a0a09;
+  --foreground-sidebars:#ffffff;
+  --highlight:#35cd96;
+  --highlight-rgb:53,205,150;
+  --foreground-highlight:#181818;
+  --inputs-odds:#181818;
+  --foreground-inputs-odds:#ffffff;
+  --game:#0a0a09;
   --foreground-game:#ffffff;
-  --foreground-league: #000000;
-  --foreground-header: #ffffff;
-  
+  --background:#181818;
+  --background-rgb:24,24,24;
+  --foreground:#ffffff;
+  --league:#0a0a09;
+  --foreground-league:#ffffff;
+  --wb-warning:#ff0000;
+  --bottom-bar:#282828;
+  --foreground-bottom-bar:#ffffff;
   --color-danger: #f61a1a;
   --color-warning: #c09516;
   --color-success: #6da544;
-  
-
 }
