--- a/src/app/shared/layout/modals/login-modal/login-modal.component.html
+++ b/src/app/shared/layout/modals/login-modal/login-modal.component.html
@@ -1,45 +1,47 @@
-<div class="modal-header">
-    <img class="logo-modal" [src]="LOGO" alt="">
-    <a type="button" class="btn-close" aria-label="Close" (click)="toClose()">
-        <i class="fa fa-times"></i>
-    </a>
-</div>
-<div class="modal-body" [ngStyle]="{'padding-top': loginGoogle ? '10px' : '40px'}">
-    <div class="modal-body-content">
-        <form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
-            <span class="space-buttons" *ngIf="loginGoogle">{{'geral.loginGoogle' | translate}}</span>
-            <asl-google-signin-button type='standard' size='large' text='signin_with' logo_alignment='center' *ngIf="loginGoogle"></asl-google-signin-button>
-            <div class="text-line" *ngIf="loginGoogle">
-                <span>OU</span>
-            </div>
-            <div class="form-group mb-4">
-                <div class="input-md">
-                    <input type="text" id="username" class="form-control inverted-out" formControlName="username" placeholder=" "
-                        [ngClass]="applyCssInputError('username')">
-                    <label for="username">{{'geral.email' | translate}}</label>
-                </div>
-                <app-error-msg [control]="form.get('username')" label="{{'geral.email' | translate}}" class="text-left"></app-error-msg>
-            </div>
-            <div class="form-group" [ngClass]="applyCssDivError('password')">
-                <div class="input-md">
-                    <input [type]=" mostrarSenha ? 'text' : 'password' " id="password" class="form-control inverted-out" [ngClass]="applyCssInputError('password')"
-                        formControlName="password" placeholder=" " (beforeinput)="onBeforeInput($event, 'password')">
-                    <label for="password">{{'geral.senha' | translate}}</label>
-                    <i class="fa showPassword" [ngClass]="mostrarSenha ? 'fa-eye-slash' : 'fa-eye'" (click)="toogleSenha()"></i>
-                </div>
-                <app-error-msg [control]="form.get('password')" label="{{'geral.senha' | translate}}" class="text-left"></app-error-msg>
-            </div>
-            <button type="submit" class="btn btn-custom btn-block">{{'geral.entrar' | translate}}</button>
-        </form>
-
-        <a (click)="abrirRecuperarSenha()" style="cursor: pointer" class="esqueceu-senha" *ngIf="modoClienteHabilitado">
-            {{'geral.esqueceuASenha' | translate}}
+<div *ngIf="modalClose">
+    <div class="modal-header">
+        <img class="logo-modal" [src]="LOGO" alt="">
+        <a type="button" class="btn-close" aria-label="Close" (click)="toClose()">
+            <i class="fa fa-times"></i>
         </a>
     </div>
+    <div class="modal-body" [ngStyle]="{'padding-top': loginGoogle ? '10px' : '40px'}">
+        <div class="modal-body-content">
+            <form [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
+                <span class="space-buttons" *ngIf="loginGoogle">{{'geral.loginGoogle' | translate}}</span>
+                <asl-google-signin-button type='standard' size='large' text='signin_with' logo_alignment='center' *ngIf="loginGoogle"></asl-google-signin-button>
+                <div class="text-line" *ngIf="loginGoogle">
+                    <span>OU</span>
+                </div>
+                <div class="form-group mb-4">
+                    <div class="input-md">
+                        <input type="text" id="username" class="form-control inverted-out" formControlName="username" placeholder=" "
+                            [ngClass]="applyCssInputError('username')">
+                        <label for="username">{{'geral.email' | translate}}</label>
+                    </div>
+                    <app-error-msg [control]="form.get('username')" label="{{'geral.email' | translate}}" class="text-left"></app-error-msg>
+                </div>
+                <div class="form-group" [ngClass]="applyCssDivError('password')">
+                    <div class="input-md">
+                        <input [type]=" mostrarSenha ? 'text' : 'password' " id="password" class="form-control inverted-out" [ngClass]="applyCssInputError('password')"
+                            formControlName="password" placeholder=" " (beforeinput)="onBeforeInput($event, 'password')">
+                        <label for="password">{{'geral.senha' | translate}}</label>
+                        <i class="fa showPassword" [ngClass]="mostrarSenha ? 'fa-eye-slash' : 'fa-eye'" (click)="toogleSenha()"></i>
+                    </div>
+                    <app-error-msg [control]="form.get('password')" label="{{'geral.senha' | translate}}" class="text-left"></app-error-msg>
+                </div>
+                <button type="submit" class="btn btn-custom btn-block">{{'geral.entrar' | translate}}</button>
+            </form>
 
-    <div class="registrar" *ngIf="modoClienteHabilitado">
-        {{'geral.naoPossuiUmaConta' | translate}}
-        <a (click)="abrirCadastro()" style="cursor: pointer" class="">{{'geral.registreSe' | translate}}</a>
+            <a (click)="abrirRecuperarSenha()" style="cursor: pointer" class="esqueceu-senha" *ngIf="modoClienteHabilitado">
+                {{'geral.esqueceuASenha' | translate}}
+            </a>
+        </div>
+
+        <div class="registrar" *ngIf="modoClienteHabilitado">
+            {{'geral.naoPossuiUmaConta' | translate}}
+            <a (click)="abrirCadastro()" style="cursor: pointer" class="">{{'geral.registreSe' | translate}}</a>
+        </div>
     </div>
 </div>
 
