--- a/src/app/casino/wall/components/wall-game-card/wall-game-card.component.html
+++ b/src/app/casino/wall/components/wall-game-card/wall-game-card.component.html
@@ -26,17 +26,8 @@
                 >
                     {{'geral.demo' | translate}}
                 </a>
-                <ng-container *ngIf="isLoggedIn && isCliente">
+                <ng-container>
                     <a
-                        [routerLink]="routerLinkReal"
-                        class="btn btn-xs game-button--play"
-                    >
-                        {{'geral.jogar' | translate}}
-                    </a>
-                </ng-container>
-                <ng-container *ngIf="!isLoggedIn">
-                    <a
-                        (click)="handleModalLogin()"
                         [routerLink]="routerLinkReal"
                         class="btn btn-xs game-button--play"
                     >
@@ -55,17 +46,9 @@
                     </a>
                 </ng-container>
                 <ng-container *ngIf="providerIsSpribe">
-                    <ng-container *ngIf="isLoggedIn">
+                    <ng-container>
                         <a
                             [routerLink]="routerLinkDemo"
-                            class="btn btn-xs game-button--demo"
-                        >
-                            {{'geral.demo' | translate}}
-                        </a>
-                    </ng-container>
-                    <ng-container *ngIf="!isLoggedIn">
-                        <a
-                            (click)="handleModalLogin()"
                             class="btn btn-xs game-button--demo"
                         >
                             {{'geral.demo' | translate}}
