--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <a class="toTop" (click)="container.scrollTop = 0" *ngIf="container">
+    <a class="toTop" (click)="scrollToTop()" *ngIf="isVisible">
         <i class="fa fa-angle-up"></i>
     </a>
     <div class="container">
