--- a/src/app/casino/wall/wall.component.css
+++ b/src/app/casino/wall/wall.component.css
@@ -182,6 +182,10 @@
     gap: 24px;
 }
 
+a.toTop {
+    right: 20px !important;
+}
+
 @media only screen and (min-width: 320px) and (max-width: 768px){
     .blocoGameList{
         padding: 0 0 24px 10px !important;
