--- a/src/app/shared/layout/modals/regras-bonus-modal/regras-bonus-modal.component.html
+++ b/src/app/shared/layout/modals/regras-bonus-modal/regras-bonus-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Regras de Bônus</h4>
+    <h4 class="modal-title" id="modal-basic-title">Regras</h4>
     <div class="action-buttons">
         <button type="button" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
             <span aria-hidden="true">&times;</span>
